[gd_scene load_steps=6 format=3 uid="uid://dvpce4i1qnm6x"]

[ext_resource type="Script" uid="uid://c3hsl6a6o4481" path="res://Scripts/OptionsController.gd" id="1_qqnya"]
[ext_resource type="FontFile" uid="uid://8sb14cf5coaj" path="res://Fonts/AbCave-Oq2O.ttf" id="2_hg628"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hy3q"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hg628"]
color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hg628"]
bg_color = Color(0, 0, 0, 1)

[node name="Options" type="Node2D"]
script = ExtResource("1_qqnya")

[node name="Panel" type="Panel" parent="."]
offset_left = -53.0
offset_top = -42.0
offset_right = 1035.0
offset_bottom = 676.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5hy3q")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 384.0
offset_top = 73.0
offset_right = 632.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("2_hg628")
theme_override_font_sizes/font_size = 72
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 409.0
offset_top = 237.0
offset_right = 614.0
offset_bottom = 562.0
theme_override_constants/separation = 22

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicHSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_hg628")
min_value = -40.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "FX Volume"
horizontal_alignment = 1

[node name="FXHSlider2" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_hg628")
min_value = -60.0

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_hg628")
text = "Return"

[connection signal="value_changed" from="Panel/VBoxContainer/MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/FXHSlider2" to="." method="_on_fxh_slider_2_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
